[package]
name = "axum-login-diesel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-login = "0.5.0"
diesel = { version = "2.1.0", features = [ "postgres", "r2d2" ] }
diesel_migrations = { version = "2.1.0", feature = [ "postgres" ] }
dotenvy = "0.15.7"
eyre = "0.6.8"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
